# homelab

./: .gitignore  Makefile  README.md
authentik/: .env.example  docker-compose.yml
caddy/: .env.example  Caddyfile  docker-compose.yml  init.sh
camera-ws-proxy/: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  openapi.yaml  pyproject.toml
camera-ws-proxy/src/: camera.py  config.py  main.py  server.py  transcoder.py
camera-ws-proxy/static/: test_stream.html
dashboard/frontend/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json
dashboard/frontend/app/: layout.tsx
duckdns/: .env.example  docker-compose.yml
excalidraw/: .env.example  docker-compose.yml
fresh-rss/: docker-compose.yml
grist/: .env.example  .gitignore  docker-compose.yml
it-tools/: docker-compose.yml
minecraft-crossplay/: README.MD  docker-compose.yml
minio/: .env.example  .gitignore  docker-compose.yml
monitoring/: .env.example  docker-compose.yml
n8n/: .env.example  .gitignore  docker-compose.yml
paperless/: .env.example  .gitignore  Makefile  PAPERLESS_SOCIALACCOUNT_PROVIDERS.template  docker-compose.yml
pihole-external/: .env.example  .gitignore  docker-compose.yml
pihole-internal/: docker-compose.yml
portainer/: README.md  docker-compose.yml
scripts/: print_authorized_keys.sh  setup_firewall.sh  setup_tailscale_subnet.sh  start_all_containers.sh  stop_all_containers.sh
stirling-pdf/: .gitignore  docker-compose.yml
vaultwarden/: .gitignore  docker-compose.yml
(+14 files in other folders)
