[tool.poetry]
name = "camera-ws-proxy"
version = "0.1.0"
description = "Camera WebSocket and HLS proxy server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
uvicorn = "^0.22.0"
websockets = "^11.0.3"
pydantic = "^2.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
